# ipmi-fan-controller

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE.md  Makefile  mkdocs.yml  pyproject.toml
docs/: index.md
docs/about/: changelog.md
src/: __init__.py  install.sh  ipmi-fan-controller.py  ipmi-fan-controller.service  working.py
tests/: conftest.py
